2021-08-13  Martin Robinson  <mrobinson@webkit.org>

        Get lint-test-expectations passing
        https://bugs.webkit.org/show_bug.cgi?id=228999

        Reviewed by Ryan Haddad.

        * Scripts/webkitpy/layout_tests/controllers/layout_test_finder.py:
        (LayoutTestFinder._is_test_file): Added a list of patterns for tests to skip
        and ensured that 'boot.xml' and 'root.xml' (spurious files created during
        the run of the WebKit1 bot) are on the list.
        * Scripts/webkitpy/layout_tests/controllers/layout_test_finder_unittest.py:
        (LayoutTestFinderTests.test_is_test_file): Added a test for the changes.

2021-08-12  Lauro Moura  <lmoura@igalia.com>

        [WPE] Gardening web-process-crashed API test failure

        Unreviewed test gardening.

        * TestWebKitAPI/glib/TestExpectations.json:

2021-08-12  Chris Dumez  <cdumez@apple.com>

        REGRESSION (iPadOS 14): [ iPadOS wk2 ] TestWebKitAPI.ServiceWorkers.SuspendNetworkProcess is a flaky failure
        https://bugs.webkit.org/show_bug.cgi?id=217714
        <rdar://problem/70296664>

        Reviewed by Geoffrey Garen.

        Give the database some time to get written out to disk before we try and suspend the network process, to try
        and address the flakiness.

        * TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:

2021-08-12  Wenson Hsieh  <wenson_hsieh@apple.com>

        [ iOS Debug] 3 editing/pasteboard/smart-paste-paragraph tests are flaky failing
        https://bugs.webkit.org/show_bug.cgi?id=228285
        rdar://81118724

        Reviewed by Tim Horton and Aditya Keerthi.

        These three editing tests occasionally fail when synthesizing a double-tap gesture in order to select a word in
        editable content. This happens because unless UIKit has observed at least one keypress event (e.g. from a
        previous editing test), it presents the software keyboard underneath `-[UIKeyboardImpl showKeyboardIfNeeded]`